// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputSearch matches snapshot with border 1`] = `
<DocumentFragment>
  <div
    class="input-search input-search__field-with-border"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium input-search__icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="SearchIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
      />
    </svg>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused input-search__field css-1i4yu0n-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yimnyd-MuiInputBase-input"
        id="standard-input"
        placeholder="Search..."
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputSearch matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="input-search "
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium input-search__icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="SearchIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
      />
    </svg>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused input-search__field css-1i4yu0n-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yimnyd-MuiInputBase-input"
        id="standard-input"
        placeholder="Search..."
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputSearch matches snapshot with value 1`] = `
<DocumentFragment>
  <div
    class="input-search "
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium input-search__icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="SearchIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
      />
    </svg>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused input-search__field css-1i4yu0n-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yimnyd-MuiInputBase-input"
        id="standard-input"
        placeholder="Search..."
        type="text"
        value="test"
      />
    </div>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium input-search__close-icon css-1umw9bq-MuiSvgIcon-root"
      data-testid="CloseIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </div>
</DocumentFragment>
`;
